// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadDifferentialExpression action Dispatches appropriately on failure 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
  },
  "type": "diffExpr/loading",
}
`;

exports[`loadDifferentialExpression action Dispatches appropriately on failure 2`] = `
Object {
  "payload": Object {
    "error": "Couldn't fetch differential expression results data.",
    "experimentId": "1234",
  },
  "type": "diffExpr/error",
}
`;

exports[`loadDifferentialExpression action Dispatches appropriately on success 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
  },
  "type": "diffExpr/loading",
}
`;

exports[`loadDifferentialExpression action Dispatches appropriately on success 2`] = `
Object {
  "payload": Object {
    "cellSets": Object {
      "basis": "condition/condition-control",
      "cellSet": "louvain/louvain-0",
      "compareWith": "louvain/louvain-1",
    },
    "comparisonType": "within",
    "data": Array [
      Object {
        "avg_log2FC": 3.45,
        "gene_names": "A",
        "p_val": 1.16,
        "p_val_adj": 2.16,
      },
      Object {
        "avg_log2FC": 4.45,
        "gene_names": "B",
        "p_val": 2.16,
        "p_val_adj": 3.16,
      },
      Object {
        "avg_log2FC": 5.45,
        "gene_names": "C",
        "p_val": 3.16,
        "p_val_adj": 4.16,
      },
      Object {
        "avg_log2FC": 6.45,
        "gene_names": "D",
        "p_val": 4.16,
        "p_val_adj": 5.16,
      },
      Object {
        "avg_log2FC": 7.45,
        "gene_names": "E",
        "p_val": 5.16,
        "p_val_adj": 6.16,
      },
      Object {
        "avg_log2FC": 8.45,
        "gene_names": "F",
        "p_val": 6.16,
        "p_val_adj": 7.16,
      },
    ],
    "experimentId": "1234",
    "total": undefined,
  },
  "type": "diffExpr/loaded",
}
`;
